[tool.poetry]
authors = ["Avery Crespi <averycrespi@gmail.com>"]
description = ""
name = "aoc2021"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"
scikit-image = "^0.19.1"
python-json-logger = "^2.0.2"

[tool.poetry.dev-dependencies]
bandit = "^1.7.1"
black = "^21.12b0"
flake8 = "^4.0.1"
mypy = "^0.910"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
